# cargo-newcpp

./: CHANGELOG.rst  Cargo.toml  LICENSE  README.md
docs/: CMakeLists.txt  dev_notes.txt
src/: cli.rs  cmake.rs  command_helper.rs  cpp.rs  cpp_scafolding.rs  gitignore.rs  hpp.rs  lib.rs  main.rs  readme.rs
templates/: CMakeGTest.make.in  CMakeLists_exe.in
templates/fs/: CMakeLists.txt.exe.in  CMakeLists.txt.lib.in  CMakeLists_exe.in  README.md.in  gitignore.in
templates/fs/cmake/: eigen.cmake  gtest.cmake  json.cmake
templates/fs/include/: dummy.hpp.in
templates/fs/src/: main.cpp.in  mylibrary.cpp.in
templates/fs/test/: CMakeGTest.make.in  example_test.cpp.in
test/: CMakeLists.txt
test/include/: dummy.hpp
test/src/: main.cpp
