[package]
authors = ["Sam Beskur <sam.beskur@gmail.com>"]
categories = ["development-tools", "development-tools::cargo-plugins"]
description = "A cargo plugin for creating new C++ projects."
documentation = "https://github.com/sjbeskur/cargo-newcpp"
homepage = "https://github.com/sjbeskur/cargo-newcpp"
keywords = ["cargo", "cli", "c++", "cpp"]
license = "Apache-2.0 OR MIT"
name = "cargo-newcpp"
readme = "README.md"
repository = "https://github.com/sjbeskur/cargo-newcpp"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.7"

[[bin]]
name = "cargo-newcpp"
path = "src/bin/new/main.rs"
required-features = ["new"]

[[bin]]
name = "cargo-buildcpp"
path = "src/bin/build/main.rs"
required-features = ["build"]

[[bin]]
name = "cargo-gtest"
path = "src/bin/gtest/main.rs"
required-features = ["gtest"]


[features]
default = ["new", "build", "gtest"]
new = []
build = []
gtest = []
#cli = ["clap"]
